// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays anchorlink with className and id 1`] = `
<div>
  <a
    class="sc-AxirZ bkUrWL custom-classname"
    id="custom-id"
    target="_self"
  >
    AnchorLink
  </a>
</div>
`;

exports[`displays default anchorlink 1`] = `
<div>
  <a
    class="sc-AxirZ bkUrWL"
    target="_self"
  >
    AnchorLink
  </a>
</div>
`;

exports[`displays external anchorlink 1`] = `
<div>
  <a
    class="sc-AxirZ bkUrWL"
    target="_blank"
  >
    AnchorLink external
    <svg
      aria-hidden="true"
      class="sc-AxjAm jPyZsV hnds-style-icon "
      fill="#126F87"
      height="48"
      role="img"
      viewBox="0 0 48 48"
      width="48"
    >
      <path
        d="M33.305 14.659v14.546h-1.3V16.948L15.804 33.149l-.919-.92 16.27-16.27-12.394.001v-1.301z"
      />
    </svg>
  </a>
</div>
`;
